DDCYLS-5468 Removed deprecated references to save4later

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,7 +100,7 @@ microservice {
     amls-stub {
       host = localhost
       port = 8941
-      get-file-url = "/anti-money-laundering/saveforlater/getfile/"
+      mongo-cache-url = "/anti-money-laundering/update-mongoCache/"
     }
     amls-frontend {
       public {
