DDCYLS-5988: dependency upgrades
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 logs
-project/project
+project/project/target
+project/project/project.project.target.config-classes
 project/target
 target
 lib_managed
