completing PR comments

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,8 +51,8 @@ session.timeoutSeconds = 1800
 controllers {
   # assets controller
   uk.gov.hmrc.play.health.AdminController = {
-    needsAuth = false
     needsLogging = false
+    needsAuditing = false
   }
   com.kenshoo.play.metrics.MetricsController = {
     needsLogging = false
