DDCYLS-7025: GOV.UK Rebrand and ‘play-frontend-hmrc’ upgrade

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,6 +34,11 @@ play.filters.csrf.header.bypassHeaders {
 play.filters.enabled += play.filters.csp.CSPFilter
 play.http.filters = play.api.http.EnabledFilters
 
+#Gov.uk rebrand
+play-frontend-hmrc {
+    useRebrand = true
+}
+
 #for Business Customer Frontend keystore data
 review-details.cache = "business-customer-frontend"
 
